fixed whitespace.css to conform to new output

--- a/test/less/whitespace.less
+++ b/test/less/whitespace.less
@@ -25,6 +25,9 @@
 }
 .no-semi-column {border: 2px solid white}
 .newlines {
+  background: the,
+              great,
+              wall;
   border: 2px
           solid
           black;
